--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
     .attribution {
       font-size: 11px;
       text-align: center;
-      display: flex;
     }
 
     .attribution a {
@@ -113,13 +112,13 @@
     </div>
   </section>
   </main>
-<!-- <footer>
+<footer>
   <div class="attribution">
     Challenge by
     <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your
       Name Here</a>.
   </div>
-</footer> -->
+</footer>
  
 </body>
 
